Fixed missing border of selected final-step image in dressStyle form

--- a/_includes/academy.css
+++ b/_includes/academy.css
@@ -422,6 +422,7 @@ h1 {
     padding: 2px;
 }
 .qa > ol {
+    padding-left: 2px;
     margin: 1em auto;
 }
 .qa ol ol {
